Add pph to intro

--- a/quarto/intro.qmd
+++ b/quarto/intro.qmd
@@ -18,7 +18,7 @@ At its core, this endeavor resonates with a diverse array of stakeholders, each 
 
 In this project, machine learning methods play a pivotal role in extracting meaningful insights from the vast sea of Amazon's retail product data. Techniques such as Principal Component Analysis (PCA) enable dimensionality reduction, allowing for the identification of key features influencing consumer behavior. Clustering algorithms group similar products or consumers together, facilitating targeted marketing strategies and personalized recommendations. Neural networks, with their ability to learn intricate patterns, offer valuable predictive capabilities, aiding in demand forecasting and inventory management. Regression analysis uncovers relationships between variables, potentially helping businesses understand the impact of pricing, promotions, and other factors on sales. Support Vector Machines (SVM), Naive Bayes, and decision trees provide additional tools for classification and prediction tasks, enriching the analytical toolkit available to researchers and practitioners alike. Through the application of these advanced methodologies, one can navigate the complexities of the digital marketplace, leveraging data-driven insights to drive innovation and strategic decision-making.
 
-To get specific, the way that machine learning will be used is in both supervised and unsupervised learning
+To get specific, the way that machine learning will be used is in both supervised and unsupervised learning settings depends on the data present within this dataset. For unsupervised learning methods, much can be done with the text data (aka the title of the product and the categories); one can do embeddings, bag-of-words, or other methods that reduce text into a couple of meaningful tags/individual words. One can also do dimension reduction and clustering in unsupervised contexts, as there are plently of numerical features in the data (number of reviews, number of stars, price, etc). For supervised learning, the feature used for label could be the feature of "Is Best Seller", which would give a binary label; or, for regression and numerical/continuous labeling, the feature "Price" could be used as it is an important feature to learn about and could potentially be predicted from the other features present. For both supervised and unsupervised learning, it is recognized that some features are essentially useless or not needed; those would be the unique strings for each product row, namely "ASIN", "Image URL", and "URL". These are important info for getting context for the product (and potentially for aquiring new data in the form of image data), but not necessary for the techniques performed on this site as no computer vision methods will be used.
 
 ## Questions to Answer
 
