--- a/src/Bayes DT.ipynb
+++ b/src/Bayes DT.ipynb
@@ -68478,9 +68478,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7f3c1b2d-d933-4297-8f2d-44fcd8dd4f6f",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "n - 1 > n - 1 - p\\\\\n",
+    "\\dfrac{(n-1)}{(n - (p + 1))} > 1\\\\\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7997826-d4ff-46bd-af33-223ad773e1f7",
+   "id": "34c0ac36-b055-4bb5-95a7-b6a4779d98f2",
    "metadata": {},
    "outputs": [],
    "source": []
