--- a/quarto/references.bib
+++ b/quarto/references.bib
@@ -111,3 +111,19 @@ keywords = {visual similarity, search, interior design, deep learning}
   howpublished = {\url{https://github.com/nicodv/kmodes}},
   year = {2015--2024}
 }
+
+@misc{svmPractical,
+  title={A practical guide to support vector classification},
+  author={Hsu, Chih-Wei and Chang, Chih-Chung and Lin, Chih-Jen and others},
+  year={2003},
+  publisher={Tapei}
+}
+
+@misc{sklearnCV,
+	title = {{Nested versus non-nested cross-validation}},
+	journal = {scikit-learn},
+	year = {2024},
+	month = apr,
+	note = {[Online; accessed 27. Apr. 2024]},
+	url = {https://scikit-learn.org/stable/auto_examples/model_selection/plot_nested_cross_validation_iris.html}
+}
